--- a/Урок 41-48. ООП/Python - PT45.html
+++ b/Урок 41-48. ООП/Python - PT45.html
@@ -162,6 +162,10 @@
       color: #AA4926;
       font-family: "JetBrains mono", monospace;
     }
+
+    ul {
+      margin-top: 0;
+    }
   </style>
 </head>
 
@@ -174,39 +178,85 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 45.1</h2>
-        <p>Создайте класс <span class="hl-text">"Игрок"</span>. Этот класс должен <span class="hl-text">хранить
+        <p>Создайте класс <span class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить
             поля</span>:
         <ul>
-          <li>Никнейм</li>
-          <li>Рейтинг</li>
-          <li>Количество побед</li>
-          <li>Количество поражений</li>
+          <li>Имя</li>
+          <li>Возраст</li>
         </ul>
         </p>
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление (<code class="python"><b>__str__</b></code>)</li>
-          <li>Конструктор (<code class="python"><b>__init__</b></code>)</li>
-          <li>Засчитывание победы
+          <li>Строковое представление</li>
+          <li>Конструктор</li>
+          <li>Свойства</li>
+        </ul>
+        </p>
+
+        <br>
+
+        <p>Создайте класс <span class="hl-text">"Студент"</span>, который наследуется от класса <span
+            class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Оценки в виде словаря, значения которого <span class="hl-text">список оценок</span>, а ключи – <span
+              class="hl-text">название предмета</span></li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Конструктор</li>
+          <li>Добавление оценки
             <ul>
-              <li>Ничего не принимает.</li>
-              <li>Увеличивает <span class="hl-text">рейтинг на <code class="python"><b>3</b></code> единицы</span>.</li>
-              <li>Увеличивает <span class="hl-text">счётчик побед на</span> <code class="python"><b>1</b></code>.</li>
-            </ul>
-          </li>
-          <li>Засчитывание поражения
-            <ul>
-              <li>Ничего не принимает.</li>
-              <li>Уменьшает <span class="hl-text">рейтинг на <code class="python"><b>10</b></code> единиц</span>.</li>
-              <li>Увеличивает <span class="hl-text">счётчик поражений на</span> <code class="python"><b>1</b></code>.
+              <li>Принимает словарь, где ключ – <span class="hl-text">название предмета</span>, а значение – <span
+                  class="hl-text">оценка</span>.</li>
+              <li>Если ключ существует, то <span class="hl-text">добавляет оценку по ключу в список</span>.</li>
+              <li>Если ключ не существует, то <span class="hl-text">добавляет ключ и список с указанной оценкой</span>.
               </li>
             </ul>
           </li>
-          <li>Соотношение побед к поражениям
+          <li>Получение средней оценки по предмету
+            <ul>
+              <li>Принимает <span class="hl-text">название предмета</span>.</li>
+              <li>Возвращает <span class="hl-text">среднюю оценку по названию предмета</span>.</li>
+            </ul>
+          </li>
+          <li>Получение средней оценки
             <ul>
               <li>Ничего не принимает.</li>
-              <li>Возвращает <span class="hl-text">победы делённые на поражения</span>.</li>
+              <li>Возвращает <span class="hl-text">среднюю оценку по всем предметам</span>.</li>
+            </ul>
+          </li>
+          <li>Получение всех названий предметов, по которым есть оценки
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Возвращает <span class="hl-text">кортеж названий предметов</span>.</li>
+            </ul>
+          </li>
+        </ul>
+        </p>
+
+        <br>
+
+        <p>Создайте класс <span class="hl-text">"Преподаватель"</span>, который наследуется от класса <span
+            class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Предмет, который ведёт преподаватель</li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Строковое представление</li>
+          <li>Конструктор</li>
+          <li>Свойства</li>
+          <li>Присвоение оценки студенту
+            <ul>
+              <li>Принимает <span class="hl-text">студента</span> и <span class="hl-text">оценку</span>.</li>
+              <li>Добавляет <span class="hl-text">студенту оценку по своему предмету</span>.</li>
             </ul>
           </li>
         </ul>
@@ -214,51 +264,277 @@
 
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 45.1</h2>
-        <p>Создайте класс <span class="hl-text">"Транспорт"</span>. Этот класс должен <span class="hl-text">хранить поля
-            для идентификатора</span> и <span class="hl-text">максимальной скорости</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
-            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса определите <span class="hl-text">метод движения</span>. Метод <span class="hl-text">принимает
-            расстояние в км</span> и <span class="hl-text">возвращает время в часах</span>, которое потратит транспорт с
-          максимальной скоростью на преодоление указанного расстояния.
-          <br>Для класса определите <span class="hl-text">метод определения требуемого количества ресурсов за
-            прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span
-            class="hl-text">возвращает количество требуемого ресурса</span>. В данном случае метод просто <span
-            class="hl-text">возвращает</span> <code class="python"><b>0</b></code>.
+        <h2>Практическое Задание 45.2</h2>
+        <p>Используя классы из <span class="hl-text">Практического Задания 45.1</span>, реализуйте следующее меню:
+        <div class="console">
+          <pre><code>1. Добавить преподавателя
+2. Добавить студента
+3. Показать подробную информацию о преподавателе
+4. Показать подробную информацию о студенте
+5. Выдать оценку от преподавателя
+6. Завершить программу</code></pre>
+        </div>
         </p>
 
-        <p>Создайте класс <span class="hl-text">"Автомобиль"</span>. Этот класс должен <span
-            class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для
-            топлива</span> и <span class="hl-text">расхода топлива на км</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
-            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за
-            прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span
-            class="hl-text">возвращает количество требуемого топлива</span>.
+        <p>Все преподаватели хранятся в <span class="hl-text">списке преподавателей</span>. Преподаватель – это <span
+            class="hl-text">экземпляр класса "Преподаватель"</span>.</p>
+        <p>Все студенты хранятся в <span class="hl-text">списке студентов</span>. Студент – это <span
+            class="hl-text">экземпляр класса "Студент"</span>.</p>
+
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>, <span class="hl-text">возраст</span> и
+            <span class="hl-text">предмет</span>.
+          </li>
+          <li>Формирует из данных <span class="hl-text">преподавателя</span>.</li>
+          <li>Пытается <span class="hl-text">добавить преподавателя в список преподавателей</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
         </p>
-        <p>Создайте класс <span class="hl-text">"Электромобиль"</span>. Этот класс должен <span
-            class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для
-            заряда</span> и <span class="hl-text">расхода заряда за час</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
-            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за
-            прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span
-            class="hl-text">возвращает количество требуемого заряда</span>.
+
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span> и <span class="hl-text">возраст</span>.
+          </li>
+          <li>Формирует из данных <span class="hl-text">студента</span>.</li>
+          <li>Пытается <span class="hl-text">добавить студента в список студентов</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 3</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
+          <li>Если преподаватель с указанным именем найден в списке преподавателей, то <span class="hl-text">выводит в
+              консоль его строковое представление</span> в виде:
+            <div class="console">
+              <pre><code>{имя} {возраст} {предмет}</code></pre>
+            </div>
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 4</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
+          <li>Если студент с указанным именем найден в списке студентов, то <span class="hl-text">выводит в
+              консоль его строковое представление</span>, <span class="hl-text">среднюю оценку</span>, <span
+              class="hl-text">все оценки</span> и <span class="hl-text">среднюю оценку по предмету</span> в виде:
+            <div class="console">
+              <pre><code>{имя} {возраст} {общая_средняя_оценка}
+{средняя_оценка_предмета} {название_предмета} {оценка} {оценка} {оценка} ...
+{средняя_оценка_предмета} {название_предмета} {оценка} {оценка} {оценка} ...
+...</code></pre>
+            </div>
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 5</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя преподавателя</span>.</li>
+          <li>Если преподаватель с указанным именем найден в списке преподавателей, то <span class="hl-text">запрашивает
+              с консоли имя студента</span>.</li>
+          <li>Если студент с указанным именем найден в списке студентов, то <span class="hl-text">запрашивает
+              с консоли оценку</span> и <span class="hl-text">выдаёт оценку от преподавателя студенту</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
         </p>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 45.2</h2>
-        <p>Реализуйте следующее меню:
+        <h2>Практическое Задание 45.3</h2>
+        <p>Создайте класс <span class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Имя</li>
+          <li>Статус</li>
+          <li>Тип</li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Строковое представление</li>
+          <li>Конструктор</li>
+          <li>Получение статуса
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Возвращает <span class="hl-text">статус</span>.</li>
+            </ul>
+          </li>
+          <li>Получение типа
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Возвращает <span class="hl-text">тип</span>.</li>
+            </ul>
+          </li>
+          <li>Включить устройство
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Если устройство выключено, то <span class="hl-text">меняет статус на включено</span>.</li>
+            </ul>
+          </li>
+          <li>Выключить устройство
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Если устройство включено, то <span class="hl-text">меняет статус на выключено</span>.</li>
+            </ul>
+          </li>
+        </ul>
+        </p>
+
+        <br>
+
+        <p>Создайте класс <span class="hl-text">"Умный свет"</span>, который наследуется от класса <span
+            class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Текущий цвет</li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Строковое представление</li>
+          <li>Конструктор, где тип – <code class="python"><b>1</b></code></li>
+          <li>Установка цвета
+            <ul>
+              <li>Принимает <span class="hl-text">строку цвета</span>.</li>
+              <li>Выставляет <span class="hl-text">цвет</span>.</li>
+            </ul>
+          </li>
+        </ul>
+        </p>
+
+        <br>
+
+        <p>Создайте класс <span class="hl-text">"Умный термостат"</span>, который наследуется от класса <span
+            class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Текущая температура</li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Строковое представление</li>
+          <li>Конструктор, где тип – <code class="python"><b>2</b></code></li>
+          <li>Установка температуры
+            <ul>
+              <li>Принимает <span class="hl-text">число</span>.</li>
+              <li>Выставляет <span class="hl-text">температуру</span>.</li>
+            </ul>
+          </li>
+        </ul>
+        </p>
+
+        <br>
+
+        <p>Создайте класс <span class="hl-text">"Умный замок"</span>, который наследуется от класса <span
+            class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+            поля</span>:
+        <ul>
+          <li>Статус замка</li>
+        </ul>
+        </p>
+
+        <p>Для класса определите <span class="hl-text">методы</span>:
+        <ul>
+          <li>Строковое представление</li>
+          <li>Конструктор, где тип – <code class="python"><b>3</b></code></li>
+          <li>Закрыть замок
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Если замок открыт, то <span class="hl-text">меняет статус замка на закрытый</span>.</li>
+            </ul>
+          </li>
+          <li>Открыть замок
+            <ul>
+              <li>Ничего не принимает.</li>
+              <li>Если замок закрыт, то <span class="hl-text">меняет статус замка на открытый</span>.</li>
+            </ul>
+          </li>
+        </ul>
+        </p>
+
+      </div>
+      <div class="right-rect">
+        <h2>Практическое Задание 45.4</h2>
+        <p>Используя классы из <span class="hl-text">Практического Задания 45.3</span>, реализуйте следующее меню:
         <div class="console">
-          <pre><code>1. Показать все автомобили из списка
-2. Добавить автомобиль в список
-3. Удалить автомобиль в список
-4. Определить количество ресурса за прохождение расстояния
+          <pre><code>1. Показать все устройства
+2. Добавить устройство
+3. Удалить устройство
+4. Выбрать устройство
 5. Завершить программу</code></pre>
         </div>
         </p>
+
+        <p>Все устройства хранятся в <span class="hl-text">списке устройств</span>. Устройство – это <span
+            class="hl-text">экземпляр класса "Устройство"</span>.</p>
+
+        <p>Выбран <span class="hl-text">пункт 1</span>:
+        <ul>
+          <li>Программа <span class="hl-text">проходит по каждому устройству</span> и <span class="hl-text">выводит в
+              консоль его строковое представление</span> в виде:
+            <div class="console">
+              <pre><code>{имя} {статус} {уникальные_данные_устройства}
+{имя} {статус} {уникальные_данные_устройства}
+...</code></pre>
+            </div>
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">выводит меню</span> в виде:
+            <div class="console">
+              <pre><code>1. Умный свет
+2. Умный термостат
+3. Умный замок</code></pre>
+            </div>
+          </li>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
+          <li>В зависимости от выбранного пункта программа ещё <span class="hl-text">запрашивает цвет</span> или <span
+              class="hl-text">температуру</span> и <span class="hl-text">создаёт соответствующий экземпляр
+              класса</span>.</li>
+          <li>Программа <span class="hl-text">добавляет устройство в список устройств</span>.</li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 3</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
+          <li>Если устройство с указанным именем есть в списке устройств, то <span class="hl-text">удаляет из устройство
+              из списка</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
+        </ul>
+        </p>
+
+        <p>Выбран <span class="hl-text">пункт 4</span>:
+        <ul>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
+          <li>Если устройство с указанным именем есть в списке устройств, то <span class="hl-text">выводит в
+              консоль его строковое представление</span> и <span class="hl-text">меню</span> в виде:
+            <div class="console">
+              <pre><code>{имя} {статус} {уникальные_данные_устройства}
+=========================================
+1. Включить (если выключен) / 1. Выключить (если включен)
+2. Сменить цвет (умный свет) / 2. Выставить температуру (умный термостат) / 2. Закрыть (умный замок открыт) / 2. Открыть (умный замок закрыт)
+</code></pre>
+            </div>
+          </li>
+          <li>При выборе пунктов <span class="hl-text">вызываются соответствующие методы устройства</span>.</li>
+        </ul>
+        </p>
       </div>
+
     </div>
   </div>
   <script>
