Updated PT46. Fixed margin.

--- a/Урок 41-48. ООП/Python - PT43.html
+++ b/Урок 41-48. ООП/Python - PT43.html
@@ -166,6 +166,10 @@
     ul {
       margin-top: 0;
     }
+
+    .inner-p {
+      margin-top: 50px;
+    }
   </style>
 </head>
 
@@ -191,8 +195,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор</li>
+          <li>Строковое представление</li>
           <li>Свойства</li>
           <li>Повышение приоритета
             <ul>
@@ -219,9 +223,8 @@
           </li>
         </ul>
         </p>
-        <br>
-        <p>Создайте класс <span class="hl-text">"TaskManager"</span>. Этот класс должен <span class="hl-text">хранить
-            поля</span>:
+        <p class="inner-p">Создайте класс <span class="hl-text">"TaskManager"</span>. Этот класс должен <span
+            class="hl-text">хранить поля</span>:
         <ul>
           <li>Список задач</li>
         </ul>
