--- a/Урок 41-48. ООП/Python - PT45.html
+++ b/Урок 41-48. ООП/Python - PT45.html
@@ -166,6 +166,10 @@
     ul {
       margin-top: 0;
     }
+
+    .inner-p {
+      margin-top: 50px;
+    }
   </style>
 </head>
 
@@ -188,17 +192,14 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор</li>
+          <li>Строковое представление</li>
           <li>Свойства</li>
         </ul>
         </p>
 
-        <br>
-
-        <p>Создайте класс <span class="hl-text">"Студент"</span>, который наследуется от класса <span
-            class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить
-            поля</span>:
+        <p class="inner-p">Создайте класс <span class="hl-text">"Студент"</span>, который наследуется от класса <span
+            class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить поля</span>:
         <ul>
           <li>Оценки в виде словаря, значения которого <span class="hl-text">список оценок</span>, а ключи – <span
               class="hl-text">название предмета</span></li>
@@ -238,11 +239,8 @@
         </ul>
         </p>
 
-        <br>
-
-        <p>Создайте класс <span class="hl-text">"Преподаватель"</span>, который наследуется от класса <span
-            class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить
-            поля</span>:
+        <p class="inner-p">Создайте класс <span class="hl-text">"Преподаватель"</span>, который наследуется от класса
+          <span class="hl-text">"Человек"</span>. Этот класс должен <span class="hl-text">хранить поля</span>:
         <ul>
           <li>Предмет, который ведёт преподаватель</li>
         </ul>
@@ -250,8 +248,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор</li>
+          <li>Строковое представление</li>
           <li>Свойства</li>
           <li>Присвоение оценки студенту
             <ul>
@@ -261,7 +259,6 @@
           </li>
         </ul>
         </p>
-
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 45.2</h2>
@@ -357,8 +354,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор</li>
+          <li>Строковое представление</li>
           <li>Получение статуса
             <ul>
               <li>Ничего не принимает.</li>
@@ -386,9 +383,7 @@
         </ul>
         </p>
 
-        <br>
-
-        <p>Создайте класс <span class="hl-text">"Умный свет"</span>, который наследуется от класса <span
+        <p class="inner-p">Создайте класс <span class="hl-text">"Умный свет"</span>, который наследуется от класса <span
             class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
             поля</span>:
         <ul>
@@ -398,8 +393,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор, где тип – <code class="python"><b>1</b></code></li>
+          <li>Строковое представление</li>
           <li>Установка цвета
             <ul>
               <li>Принимает <span class="hl-text">строку цвета</span>.</li>
@@ -409,10 +404,8 @@
         </ul>
         </p>
 
-        <br>
-
-        <p>Создайте класс <span class="hl-text">"Умный термостат"</span>, который наследуется от класса <span
-            class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+        <p class="inner-p">Создайте класс <span class="hl-text">"Умный термостат"</span>, который наследуется от класса
+          <span class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
             поля</span>:
         <ul>
           <li>Текущая температура</li>
@@ -421,8 +414,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор, где тип – <code class="python"><b>2</b></code></li>
+          <li>Строковое представление</li>
           <li>Установка температуры
             <ul>
               <li>Принимает <span class="hl-text">число</span>.</li>
@@ -432,10 +425,8 @@
         </ul>
         </p>
 
-        <br>
-
-        <p>Создайте класс <span class="hl-text">"Умный замок"</span>, который наследуется от класса <span
-            class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+        <p class="inner-p">Создайте класс <span class="hl-text">"Умный замок"</span>, который наследуется от класса
+          <span class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
             поля</span>:
         <ul>
           <li>Статус замка</li>
@@ -444,8 +435,8 @@
 
         <p>Для класса определите <span class="hl-text">методы</span>:
         <ul>
-          <li>Строковое представление</li>
           <li>Конструктор, где тип – <code class="python"><b>3</b></code></li>
+          <li>Строковое представление</li>
           <li>Закрыть замок
             <ul>
               <li>Ничего не принимает.</li>
